@@ -78,6 +78,8 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -236,9 +238,13 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         final PaginatedList<PipelineDao> result = paginatedPipelineService
                 .findPaginated(searchQuery, filter, page, perPage, sort, order);
+        final Map<String, PipelineRulesMetadataDao> metadataDaos = metadataService.get(
+                result.stream().map(PipelineDao::id).collect(Collectors.toSet())
+        );
         final List<PipelineSource> pipelineList = result.stream()
-                .map(dao -> PipelineSource.fromDao(pipelineRuleParser, dao))
-                .collect(Collectors.toList());
+                .map(dao -> PipelineSource.fromDao(
+                        pipelineRuleParser, dao, metadataDaos.get(dao.id()) != null && metadataDaos.get(dao.id()).hasDeprecatedFunctions()))
+                .toList();
         final PaginatedList<PipelineSource> pipelines = new PaginatedList<>(pipelineList,
                 result.pagination().total(), result.pagination().page(), result.pagination().perPage());
         return PaginatedResponse.create("pipelines", pipelines);
@@ -261,6 +267,14 @@ public class PipelineResource extends RestResource implements PluginRestResource
         return metadataService.get(id);
     }
 
+    @Operation(summary = "Get list of deprecated functions used in specified rule")
+    @Path("/rule/{id}/deprecated_functions")
+    @GET
+    public Set<String> getDeprecatedFunctionsForRule(@Parameter(name = "id") @PathParam("id") String id)
+            throws NotFoundException {
+        checkPermission(PipelineRestPermissions.PIPELINE_RULE_READ, id);
+        return deprecatedFunctionsRule(id);
+    }
 
     @Operation(summary = "Modify a processing pipeline", description = "It can take up to a second until the change is applied")
     @Path("/{id}")
@@ -304,7 +318,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         // Add rule to existing pipeline
         PipelineSource pipelineSource = PipelineSource.fromDao(pipelineRuleParser, pipelineDao);
-        final List<String> rules0 = pipelineSource.stages().get(0).rules();
+        final List<String> rules0 = pipelineSource.stages().getFirst().rules();
         if (rules0.stream().filter(ruleRef -> ruleRef.equals(ruleDao.title())).findFirst().isEmpty()) {
             rules0.add(ruleDao.title());
             pipelineSource = pipelineSource.toBuilder()
@@ -372,5 +386,13 @@ public class PipelineResource extends RestResource implements PluginRestResource
             throw new BadRequestException("Pipeline cannot use system rules: " + usedSystemRules);
         }
 
+    }
+
+    private Set<String> deprecatedFunctionsRule(String ruleId) throws NotFoundException {
+        Set<String> superset = metadataService.getPipelinesByRule(ruleId).stream()
+                .flatMap(pipelineId -> metadataService.deprecatedFunctionsPipeline(pipelineId).stream())
+                .collect(Collectors.toSet());
+        final RuleDao rule = ruleService.load(ruleId);
+        return superset.stream().filter(func -> rule.source().contains(func)).collect(Collectors.toSet());
     }
 }
